// 2.55 Change Log
// Updated 7th May, 2022

Fix separate 'item override' active shields not using
	the correct shield.
Fix several issues related to large items
	-Large bottles now display correctly
	-With a compat rule for old behavior, engine subscreen selectors
		will now stretch to fit sized items on the subscreen (uses hit sizes)
	-Large items will now preview correctly in the item editor
	-Dropdown added for bottle items to preview any bottle type
Fix crash near end of combo list with large combo brush size
Active Shields: Step speed modifier, lock direction (strafing)
	( EmilyV, May 7th, 2022 )

Fix crash in 4-way movement
	( EmilyV, May 2nd, 2022 )

-- May 1st nightly build

Fix itemclass zinfo not refreshing on opening subscreen editor
	( EmilyV, May 1, 2022 )

Stomp boots can hit multiple enemies, and stunned/clocked enemies.
	( Deedee, May 1, 2022 )

Fix fairy spawning limit QR being reversed
Fix scripted `npc->Knockback()` clipping into walls
Add `->Drowning` and `->DrownCombo` access for scripts
Add option to sort mapflags by ID
	( Deedee, Apr 30, 2022 )

Shields can now be configured to block different sides
	( EmilyV, Apr 29, 2022 )

Fix dmap script restarting issues
	( Deedee, Apr 28, 2022 )

Add 'npc->InvFlicker' to match 'Hero->InvFlicker'
Add the new features from lock blocks to locked chests as well
	Also, locked chests and boss-locked chests can now display a separate button-prompt
	pop-up when you are unable to open them.
Add 'open chest' sfx for chest combos
Allow light targets to block light
Add active shields (must hold button down to block)
Add active clocks, 'Kill All Enemies', and the new itemclass 'Refiller' which
	acts as an active version of a counter refilling item.
	( EmilyV, Apr 27, 2022 )

-- Apr 25th nightly build

Fix issues with rotate/flip in combo editor
Fix several issues with map flags, and added new shortcuts:
	CTRL+Click will 'floodfill' a flag
	ALT+Click will 'select' a flag