@@ -2361,6 +2361,10 @@ script_variable variable_list[]=
 	{ "EWPNVY", EWPNVY, 0, 0 },
 	{ "LWPNAUTOROTATE", LWPNAUTOROTATE, 0, 0 },
 	{ "EWPNAUTOROTATE", EWPNAUTOROTATE, 0, 0 },
+	{ "IDATACOSTCOUNTER2", IDATACOSTCOUNTER2, 0, 0 },
+	{ "IDATAMAGICTIMER2", IDATAMAGICTIMER2, 0, 0 },
+	{ "IDATACOST2", IDATACOST2, 0, 0 },
+	{ "IDATAVALIDATE2", IDATAVALIDATE2, 0, 0 },
 	
 	{ " ",  -1, 0, 0 }
 };
