@@ -1269,11 +1269,13 @@ string ZScript::VarToString(int32_t ID)
 
 	//case IDATAFRAME: return "IDATAFRAME";
 	case IDATACOSTCOUNTER: return "IDATACOSTCOUNTER";
+	case IDATACOSTCOUNTER2: return "IDATACOSTCOUNTER2";
 	case ITEMCLASSID: return "IDATAID";
 	case IDATALTM: return "IDATALTM";
 	case IDATAPSCRIPT: return "IDATAPSCRIPT";
 	case IDATASCRIPT: return "IDATASCRIPT";
 	case IDATAMAGCOST: return "IDATAMAGCOST";
+	case IDATACOST2: return "IDATACOST2";
 	case IDATAMINHEARTS: return "IDATAMINHEARTS";
 	case IDATATILE: return "IDATATILE";
 	case IDATAMISC: return "IDATAMISC";    
@@ -1300,6 +1302,7 @@ string ZScript::VarToString(int32_t ID)
 	case IDATAUSEDEF: return "IDATAUSEDEF";
 	case IDATAWRANGE: return "IDATAWRANGE";
 	case IDATAMAGICTIMER: return "IDATAMAGICTIMER";
+	case IDATAMAGICTIMER2: return "IDATAMAGICTIMER2";
 	case IDATAUSEMVT: return "IDATAUSEMVT";
 	case IDATADURATION: return "IDATADURATION";
 	case IDATADUPLICATES: return "IDATADUPLICATES";
@@ -1925,6 +1928,7 @@ string ZScript::VarToString(int32_t ID)
 	case MAPDATAMAP: return "MAPDATAMAP";
 	case MAPDATASCREEN: return "MAPDATASCREEN";
 	case IDATAVALIDATE: return "IDATAVALIDATE";
+	case IDATAVALIDATE2: return "IDATAVALIDATE2";
 	case GAMESUSPEND: return "GAMESUSPEND";
 	case LINKOTILE: return "LINKOTILE";
 	case LINKOFLIP: return "LINKOFLIP";
