@@ -4291,8 +4291,12 @@ static AccessorTable itemclassTable[] =
 	{ "setMagicCost",               ZVARTYPEID_VOID,          SETTER,       IDATAMAGCOST,         1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getCost",                    ZVARTYPEID_FLOAT,         GETTER,       IDATAMAGCOST,         1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
 	{ "setCost",                    ZVARTYPEID_VOID,          SETTER,       IDATAMAGCOST,         1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getCost2",                   ZVARTYPEID_FLOAT,         GETTER,       IDATACOST2,           1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
+	{ "setCost2",                   ZVARTYPEID_VOID,          SETTER,       IDATACOST2,           1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getCostCounter",             ZVARTYPEID_FLOAT,         GETTER,       IDATACOSTCOUNTER,     1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
 	{ "setCostCounter",             ZVARTYPEID_VOID,          SETTER,       IDATACOSTCOUNTER,     1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getCostCounter2",            ZVARTYPEID_FLOAT,         GETTER,       IDATACOSTCOUNTER2,    1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
+	{ "setCostCounter2",            ZVARTYPEID_VOID,          SETTER,       IDATACOSTCOUNTER2,    1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getMinHearts",               ZVARTYPEID_FLOAT,         GETTER,       IDATAMINHEARTS,       1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
 	{ "setMinHearts",               ZVARTYPEID_VOID,          SETTER,       IDATAMINHEARTS,       1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getTile",                    ZVARTYPEID_FLOAT,         GETTER,       IDATATILE,            1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
@@ -4391,6 +4395,8 @@ static AccessorTable itemclassTable[] =
 	{ "setMagicCostTimer",          ZVARTYPEID_VOID,          SETTER,       IDATAMAGICTIMER,      1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getCostTimer",               ZVARTYPEID_FLOAT,         GETTER,       IDATAMAGICTIMER,      1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
 	{ "setCostTimer",               ZVARTYPEID_VOID,          SETTER,       IDATAMAGICTIMER,      1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getCostTimer2",              ZVARTYPEID_FLOAT,         GETTER,       IDATAMAGICTIMER2,      1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },      
+	{ "setCostTimer2",              ZVARTYPEID_VOID,          SETTER,       IDATAMAGICTIMER2,      1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	
 	
 	
@@ -4434,6 +4440,8 @@ static AccessorTable itemclassTable[] =
 	
 	{ "getValidate",                ZVARTYPEID_BOOL,          GETTER,       IDATAVALIDATE,        1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "setValidate",                ZVARTYPEID_VOID,          SETTER,       IDATAVALIDATE,        1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getValidate2",               ZVARTYPEID_BOOL,          GETTER,       IDATAVALIDATE2,       1,             0,                                    1,           { ZVARTYPEID_ITEMCLASS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "setValidate2",               ZVARTYPEID_VOID,          SETTER,       IDATAVALIDATE2,       1,             0,                                    2,           { ZVARTYPEID_ITEMCLASS, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	
 	{ "",                           -1,                       -1,           -1,                   -1,            0,                                    0,           { -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } }
 };
